// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: Progress should have right properties 1`] = `
LoadedCheerio {
  "0": <div
    class="progress class-name  "
    style="color: red; background-color: yellow; height: 10px;"
  >
    <div
      class="inner active"
      style="width: 50%; background-color: blue; transition-duration: 1500ms;"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: Progress should render correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="progress   "
    style="background-color: rgb(235, 235, 235); height: 6px;"
  >
    <div
      class="inner "
      style="width: 0%; background-color: rgb(248, 89, 89); transition-duration: 0ms;"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
